// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GeneratePropsJavaInterface can generate fixture ARRAY_PROPS 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/ArrayPropsNativeComponentManagerInterface.kt" => "/**
* This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
*
* Do not edit this file as changes may cause incorrect behavior and will be lost
* once the code is regenerated.
*
* @generated by codegen project: GeneratePropsJavaInterface.js
*/

package com.facebook.react.viewmanagers

import android.view.View;
import com.facebook.react.bridge.ReadableArray;
import com.facebook.react.uimanager.ViewManagerWithGeneratedInterface;

public interface ArrayPropsNativeComponentManagerInterface<T: View>: ViewManagerWithGeneratedInterface {
  public fun setNames(view: T, value: ReadableArray?): Unit
  public fun setDisableds(view: T, value: ReadableArray?): Unit
  public fun setProgress(view: T, value: ReadableArray?): Unit
  public fun setRadii(view: T, value: ReadableArray?): Unit
  public fun setColors(view: T, value: ReadableArray?): Unit
  public fun setSrcs(view: T, value: ReadableArray?): Unit
  public fun setPoints(view: T, value: ReadableArray?): Unit
  public fun setDimensions(view: T, value: ReadableArray?): Unit
  public fun setSizes(view: T, value: ReadableArray?): Unit
  public fun setObject(view: T, value: ReadableArray?): Unit
  public fun setArray(view: T, value: ReadableArray?): Unit
  public fun setArrayOfArrayOfObject(view: T, value: ReadableArray?): Unit
  public fun setArrayOfMixed(view: T, value: ReadableArray?): Unit
}
",
}
`;

exports[`GeneratePropsJavaInterface can generate fixture ARRAY_PROPS_WITH_NESTED_OBJECT 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/ArrayPropsNativeComponentManagerInterface.kt" => "/**
* This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
*
* Do not edit this file as changes may cause incorrect behavior and will be lost
* once the code is regenerated.
*
* @generated by codegen project: GeneratePropsJavaInterface.js
*/

package com.facebook.react.viewmanagers

import android.view.View;
import com.facebook.react.bridge.ReadableArray;
import com.facebook.react.uimanager.ViewManagerWithGeneratedInterface;

public interface ArrayPropsNativeComponentManagerInterface<T: View>: ViewManagerWithGeneratedInterface {
  public fun setNativePrimitives(view: T, value: ReadableArray?): Unit
}
",
}
`;

exports[`GeneratePropsJavaInterface can generate fixture BOOLEAN_PROP 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/BooleanPropNativeComponentManagerInterface.kt" => "/**
* This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
*
* Do not edit this file as changes may cause incorrect behavior and will be lost
* once the code is regenerated.
*
* @generated by codegen project: GeneratePropsJavaInterface.js
*/

package com.facebook.react.viewmanagers

import android.view.View;
import com.facebook.react.uimanager.ViewManagerWithGeneratedInterface;

public interface BooleanPropNativeComponentManagerInterface<T: View>: ViewManagerWithGeneratedInterface {
  public fun setDisabled(view: T, value: Boolean): Unit
}
",
}
`;

exports[`GeneratePropsJavaInterface can generate fixture COLOR_PROP 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/ColorPropNativeComponentManagerInterface.kt" => "/**
* This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
*
* Do not edit this file as changes may cause incorrect behavior and will be lost
* once the code is regenerated.
*
* @generated by codegen project: GeneratePropsJavaInterface.js
*/

package com.facebook.react.viewmanagers

import android.view.View;
import com.facebook.react.uimanager.ViewManagerWithGeneratedInterface;

public interface ColorPropNativeComponentManagerInterface<T: View>: ViewManagerWithGeneratedInterface {
  public fun setTintColor(view: T, value: Int?): Unit
}
",
}
`;

exports[`GeneratePropsJavaInterface can generate fixture COMMANDS 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/CommandNativeComponentManagerInterface.kt" => "/**
* This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
*
* Do not edit this file as changes may cause incorrect behavior and will be lost
* once the code is regenerated.
*
* @generated by codegen project: GeneratePropsJavaInterface.js
*/

package com.facebook.react.viewmanagers

import android.view.View;
import com.facebook.react.bridge.ReadableArray;
import com.facebook.react.uimanager.ViewManagerWithGeneratedInterface;

public interface CommandNativeComponentManagerInterface<T: View>: ViewManagerWithGeneratedInterface {
  // No props
  public fun flashScrollIndicators(view: T): Unit
  public fun allTypes(view: T, x: Int, y: Float, z: Double, message: String, animated: Boolean, locations: ReadableArray): Unit
}
",
}
`;

exports[`GeneratePropsJavaInterface can generate fixture COMMANDS_AND_PROPS 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/CommandNativeComponentManagerInterface.kt" => "/**
* This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
*
* Do not edit this file as changes may cause incorrect behavior and will be lost
* once the code is regenerated.
*
* @generated by codegen project: GeneratePropsJavaInterface.js
*/

package com.facebook.react.viewmanagers

import android.view.View;
import com.facebook.react.bridge.ReadableArray;
import com.facebook.react.uimanager.ViewManagerWithGeneratedInterface;

public interface CommandNativeComponentManagerInterface<T: View>: ViewManagerWithGeneratedInterface {
  public fun setAccessibilityHint(view: T, value: String?): Unit
  public fun handleRootTag(view: T, rootTag: Double): Unit
  public fun hotspotUpdate(view: T, x: Int, y: Int): Unit
  public fun addItems(view: T, items: ReadableArray): Unit
}
",
}
`;

exports[`GeneratePropsJavaInterface can generate fixture DIMENSION_PROP 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/DimensionPropNativeComponentManagerInterface.kt" => "/**
* This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
*
* Do not edit this file as changes may cause incorrect behavior and will be lost
* once the code is regenerated.
*
* @generated by codegen project: GeneratePropsJavaInterface.js
*/

package com.facebook.react.viewmanagers

import android.view.View;
import com.facebook.react.uimanager.ViewManagerWithGeneratedInterface;
import com.facebook.yoga.YogaValue;

public interface DimensionPropNativeComponentManagerInterface<T: View>: ViewManagerWithGeneratedInterface {
  public fun setMarginBack(view: T, value: YogaValue?): Unit
}
",
}
`;

exports[`GeneratePropsJavaInterface can generate fixture DOUBLE_PROPS 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/DoublePropNativeComponentManagerInterface.kt" => "/**
* This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
*
* Do not edit this file as changes may cause incorrect behavior and will be lost
* once the code is regenerated.
*
* @generated by codegen project: GeneratePropsJavaInterface.js
*/

package com.facebook.react.viewmanagers

import android.view.View;
import com.facebook.react.uimanager.ViewManagerWithGeneratedInterface;

public interface DoublePropNativeComponentManagerInterface<T: View>: ViewManagerWithGeneratedInterface {
  public fun setBlurRadius(view: T, value: Double): Unit
  public fun setBlurRadius2(view: T, value: Double): Unit
  public fun setBlurRadius3(view: T, value: Double): Unit
  public fun setBlurRadius4(view: T, value: Double): Unit
  public fun setBlurRadius5(view: T, value: Double): Unit
  public fun setBlurRadius6(view: T, value: Double): Unit
}
",
}
`;

exports[`GeneratePropsJavaInterface can generate fixture EVENT_NESTED_OBJECT_PROPS 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/EventsNestedObjectNativeComponentManagerInterface.kt" => "/**
* This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
*
* Do not edit this file as changes may cause incorrect behavior and will be lost
* once the code is regenerated.
*
* @generated by codegen project: GeneratePropsJavaInterface.js
*/

package com.facebook.react.viewmanagers

import android.view.View;
import com.facebook.react.uimanager.ViewManagerWithGeneratedInterface;

public interface EventsNestedObjectNativeComponentManagerInterface<T: View>: ViewManagerWithGeneratedInterface {
  public fun setDisabled(view: T, value: Boolean): Unit
}
",
}
`;

exports[`GeneratePropsJavaInterface can generate fixture EVENT_PROPS 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/EventsNativeComponentManagerInterface.kt" => "/**
* This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
*
* Do not edit this file as changes may cause incorrect behavior and will be lost
* once the code is regenerated.
*
* @generated by codegen project: GeneratePropsJavaInterface.js
*/

package com.facebook.react.viewmanagers

import android.view.View;
import com.facebook.react.uimanager.ViewManagerWithGeneratedInterface;

public interface EventsNativeComponentManagerInterface<T: View>: ViewManagerWithGeneratedInterface {
  public fun setDisabled(view: T, value: Boolean): Unit
}
",
}
`;

exports[`GeneratePropsJavaInterface can generate fixture EVENTS_WITH_PAPER_NAME 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/InterfaceOnlyComponentManagerInterface.kt" => "/**
* This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
*
* Do not edit this file as changes may cause incorrect behavior and will be lost
* once the code is regenerated.
*
* @generated by codegen project: GeneratePropsJavaInterface.js
*/

package com.facebook.react.viewmanagers

import android.view.View;
import com.facebook.react.uimanager.ViewManagerWithGeneratedInterface;

public interface InterfaceOnlyComponentManagerInterface<T: View>: ViewManagerWithGeneratedInterface {
  // No props
}
",
}
`;

exports[`GeneratePropsJavaInterface can generate fixture EXCLUDE_ANDROID 1`] = `Map {}`;

exports[`GeneratePropsJavaInterface can generate fixture EXCLUDE_ANDROID_IOS 1`] = `Map {}`;

exports[`GeneratePropsJavaInterface can generate fixture EXCLUDE_IOS_TWO_COMPONENTS_DIFFERENT_FILES 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/ExcludedIosComponentManagerInterface.kt" => "/**
* This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
*
* Do not edit this file as changes may cause incorrect behavior and will be lost
* once the code is regenerated.
*
* @generated by codegen project: GeneratePropsJavaInterface.js
*/

package com.facebook.react.viewmanagers

import android.view.View;
import com.facebook.react.uimanager.ViewManagerWithGeneratedInterface;

public interface ExcludedIosComponentManagerInterface<T: View>: ViewManagerWithGeneratedInterface {
  // No props
}
",
  "java/com/facebook/react/viewmanagers/MultiFileIncludedNativeComponentManagerInterface.kt" => "/**
* This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
*
* Do not edit this file as changes may cause incorrect behavior and will be lost
* once the code is regenerated.
*
* @generated by codegen project: GeneratePropsJavaInterface.js
*/

package com.facebook.react.viewmanagers

import android.view.View;
import com.facebook.react.uimanager.ViewManagerWithGeneratedInterface;

public interface MultiFileIncludedNativeComponentManagerInterface<T: View>: ViewManagerWithGeneratedInterface {
  public fun setDisabled(view: T, value: Boolean): Unit
}
",
}
`;

exports[`GeneratePropsJavaInterface can generate fixture FLOAT_PROPS 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/FloatPropNativeComponentManagerInterface.kt" => "/**
* This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
*
* Do not edit this file as changes may cause incorrect behavior and will be lost
* once the code is regenerated.
*
* @generated by codegen project: GeneratePropsJavaInterface.js
*/

package com.facebook.react.viewmanagers

import android.view.View;
import com.facebook.react.uimanager.ViewManagerWithGeneratedInterface;

public interface FloatPropNativeComponentManagerInterface<T: View>: ViewManagerWithGeneratedInterface {
  public fun setBlurRadius(view: T, value: Float): Unit
  public fun setBlurRadius2(view: T, value: Float): Unit
  public fun setBlurRadius3(view: T, value: Float): Unit
  public fun setBlurRadius4(view: T, value: Float): Unit
  public fun setBlurRadius5(view: T, value: Float): Unit
  public fun setBlurRadius6(view: T, value: Float): Unit
}
",
}
`;

exports[`GeneratePropsJavaInterface can generate fixture IMAGE_PROP 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/ImagePropNativeComponentManagerInterface.kt" => "/**
* This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
*
* Do not edit this file as changes may cause incorrect behavior and will be lost
* once the code is regenerated.
*
* @generated by codegen project: GeneratePropsJavaInterface.js
*/

package com.facebook.react.viewmanagers

import android.view.View;
import com.facebook.react.bridge.ReadableMap;
import com.facebook.react.uimanager.ViewManagerWithGeneratedInterface;

public interface ImagePropNativeComponentManagerInterface<T: View>: ViewManagerWithGeneratedInterface {
  public fun setThumbImage(view: T, value: ReadableMap?): Unit
}
",
}
`;

exports[`GeneratePropsJavaInterface can generate fixture INSETS_PROP 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/InsetsPropNativeComponentManagerInterface.kt" => "/**
* This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
*
* Do not edit this file as changes may cause incorrect behavior and will be lost
* once the code is regenerated.
*
* @generated by codegen project: GeneratePropsJavaInterface.js
*/

package com.facebook.react.viewmanagers

import android.view.View;
import com.facebook.react.bridge.ReadableMap;
import com.facebook.react.uimanager.ViewManagerWithGeneratedInterface;

public interface InsetsPropNativeComponentManagerInterface<T: View>: ViewManagerWithGeneratedInterface {
  public fun setContentInset(view: T, value: ReadableMap?): Unit
}
",
}
`;

exports[`GeneratePropsJavaInterface can generate fixture INT32_ENUM_PROP 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/Int32EnumPropsNativeComponentManagerInterface.kt" => "/**
* This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
*
* Do not edit this file as changes may cause incorrect behavior and will be lost
* once the code is regenerated.
*
* @generated by codegen project: GeneratePropsJavaInterface.js
*/

package com.facebook.react.viewmanagers

import android.view.View;
import com.facebook.react.uimanager.ViewManagerWithGeneratedInterface;

public interface Int32EnumPropsNativeComponentManagerInterface<T: View>: ViewManagerWithGeneratedInterface {
  public fun setMaxInterval(view: T, value: Int?): Unit
}
",
}
`;

exports[`GeneratePropsJavaInterface can generate fixture INTEGER_PROPS 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/IntegerPropNativeComponentManagerInterface.kt" => "/**
* This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
*
* Do not edit this file as changes may cause incorrect behavior and will be lost
* once the code is regenerated.
*
* @generated by codegen project: GeneratePropsJavaInterface.js
*/

package com.facebook.react.viewmanagers

import android.view.View;
import com.facebook.react.uimanager.ViewManagerWithGeneratedInterface;

public interface IntegerPropNativeComponentManagerInterface<T: View>: ViewManagerWithGeneratedInterface {
  public fun setProgress1(view: T, value: Int): Unit
  public fun setProgress2(view: T, value: Int): Unit
  public fun setProgress3(view: T, value: Int): Unit
}
",
}
`;

exports[`GeneratePropsJavaInterface can generate fixture INTERFACE_ONLY 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/InterfaceOnlyComponentManagerInterface.kt" => "/**
* This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
*
* Do not edit this file as changes may cause incorrect behavior and will be lost
* once the code is regenerated.
*
* @generated by codegen project: GeneratePropsJavaInterface.js
*/

package com.facebook.react.viewmanagers

import android.view.View;
import com.facebook.react.uimanager.ViewManagerWithGeneratedInterface;

public interface InterfaceOnlyComponentManagerInterface<T: View>: ViewManagerWithGeneratedInterface {
  public fun setAccessibilityHint(view: T, value: String?): Unit
}
",
}
`;

exports[`GeneratePropsJavaInterface can generate fixture MIXED_PROP 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/MixedPropNativeComponentManagerInterface.kt" => "/**
* This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
*
* Do not edit this file as changes may cause incorrect behavior and will be lost
* once the code is regenerated.
*
* @generated by codegen project: GeneratePropsJavaInterface.js
*/

package com.facebook.react.viewmanagers

import android.view.View;
import com.facebook.react.bridge.Dynamic;
import com.facebook.react.uimanager.ViewManagerWithGeneratedInterface;

public interface MixedPropNativeComponentManagerInterface<T: View>: ViewManagerWithGeneratedInterface {
  public fun setMixedProp(view: T, value: Dynamic): Unit
}
",
}
`;

exports[`GeneratePropsJavaInterface can generate fixture MULTI_NATIVE_PROP 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/ImageColorPropNativeComponentManagerInterface.kt" => "/**
* This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
*
* Do not edit this file as changes may cause incorrect behavior and will be lost
* once the code is regenerated.
*
* @generated by codegen project: GeneratePropsJavaInterface.js
*/

package com.facebook.react.viewmanagers

import android.view.View;
import com.facebook.react.bridge.ReadableMap;
import com.facebook.react.uimanager.ViewManagerWithGeneratedInterface;

public interface ImageColorPropNativeComponentManagerInterface<T: View>: ViewManagerWithGeneratedInterface {
  public fun setThumbImage(view: T, value: ReadableMap?): Unit
  public fun setColor(view: T, value: Int?): Unit
  public fun setThumbTintColor(view: T, value: Int?): Unit
  public fun setPoint(view: T, value: ReadableMap?): Unit
}
",
}
`;

exports[`GeneratePropsJavaInterface can generate fixture NO_PROPS_NO_EVENTS 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/NoPropsNoEventsComponentManagerInterface.kt" => "/**
* This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
*
* Do not edit this file as changes may cause incorrect behavior and will be lost
* once the code is regenerated.
*
* @generated by codegen project: GeneratePropsJavaInterface.js
*/

package com.facebook.react.viewmanagers

import android.view.View;
import com.facebook.react.uimanager.ViewManagerWithGeneratedInterface;

public interface NoPropsNoEventsComponentManagerInterface<T: View>: ViewManagerWithGeneratedInterface {
  // No props
}
",
}
`;

exports[`GeneratePropsJavaInterface can generate fixture OBJECT_PROPS 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/ObjectPropsManagerInterface.kt" => "/**
* This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
*
* Do not edit this file as changes may cause incorrect behavior and will be lost
* once the code is regenerated.
*
* @generated by codegen project: GeneratePropsJavaInterface.js
*/

package com.facebook.react.viewmanagers

import android.view.View;
import com.facebook.react.bridge.ReadableMap;
import com.facebook.react.uimanager.ViewManagerWithGeneratedInterface;

public interface ObjectPropsManagerInterface<T: View>: ViewManagerWithGeneratedInterface {
  public fun setObjectProp(view: T, value: ReadableMap?): Unit
}
",
}
`;

exports[`GeneratePropsJavaInterface can generate fixture POINT_PROP 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/PointPropNativeComponentManagerInterface.kt" => "/**
* This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
*
* Do not edit this file as changes may cause incorrect behavior and will be lost
* once the code is regenerated.
*
* @generated by codegen project: GeneratePropsJavaInterface.js
*/

package com.facebook.react.viewmanagers

import android.view.View;
import com.facebook.react.bridge.ReadableMap;
import com.facebook.react.uimanager.ViewManagerWithGeneratedInterface;

public interface PointPropNativeComponentManagerInterface<T: View>: ViewManagerWithGeneratedInterface {
  public fun setStartPoint(view: T, value: ReadableMap?): Unit
}
",
}
`;

exports[`GeneratePropsJavaInterface can generate fixture STRING_ENUM_PROP 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/StringEnumPropsNativeComponentManagerInterface.kt" => "/**
* This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
*
* Do not edit this file as changes may cause incorrect behavior and will be lost
* once the code is regenerated.
*
* @generated by codegen project: GeneratePropsJavaInterface.js
*/

package com.facebook.react.viewmanagers

import android.view.View;
import com.facebook.react.uimanager.ViewManagerWithGeneratedInterface;

public interface StringEnumPropsNativeComponentManagerInterface<T: View>: ViewManagerWithGeneratedInterface {
  public fun setAlignment(view: T, value: String?): Unit
}
",
}
`;

exports[`GeneratePropsJavaInterface can generate fixture STRING_PROP 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/StringPropComponentManagerInterface.kt" => "/**
* This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
*
* Do not edit this file as changes may cause incorrect behavior and will be lost
* once the code is regenerated.
*
* @generated by codegen project: GeneratePropsJavaInterface.js
*/

package com.facebook.react.viewmanagers

import android.view.View;
import com.facebook.react.uimanager.ViewManagerWithGeneratedInterface;

public interface StringPropComponentManagerInterface<T: View>: ViewManagerWithGeneratedInterface {
  public fun setAccessibilityHint(view: T, value: String?): Unit
  public fun setAccessibilityRole(view: T, value: String?): Unit
}
",
}
`;

exports[`GeneratePropsJavaInterface can generate fixture TWO_COMPONENTS_DIFFERENT_FILES 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/MultiFile1NativeComponentManagerInterface.kt" => "/**
* This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
*
* Do not edit this file as changes may cause incorrect behavior and will be lost
* once the code is regenerated.
*
* @generated by codegen project: GeneratePropsJavaInterface.js
*/

package com.facebook.react.viewmanagers

import android.view.View;
import com.facebook.react.uimanager.ViewManagerWithGeneratedInterface;

public interface MultiFile1NativeComponentManagerInterface<T: View>: ViewManagerWithGeneratedInterface {
  public fun setDisabled(view: T, value: Boolean): Unit
}
",
  "java/com/facebook/react/viewmanagers/MultiFile2NativeComponentManagerInterface.kt" => "/**
* This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
*
* Do not edit this file as changes may cause incorrect behavior and will be lost
* once the code is regenerated.
*
* @generated by codegen project: GeneratePropsJavaInterface.js
*/

package com.facebook.react.viewmanagers

import android.view.View;
import com.facebook.react.uimanager.ViewManagerWithGeneratedInterface;

public interface MultiFile2NativeComponentManagerInterface<T: View>: ViewManagerWithGeneratedInterface {
  public fun setDisabled(view: T, value: Boolean): Unit
}
",
}
`;

exports[`GeneratePropsJavaInterface can generate fixture TWO_COMPONENTS_SAME_FILE 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/MultiComponent1NativeComponentManagerInterface.kt" => "/**
* This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
*
* Do not edit this file as changes may cause incorrect behavior and will be lost
* once the code is regenerated.
*
* @generated by codegen project: GeneratePropsJavaInterface.js
*/

package com.facebook.react.viewmanagers

import android.view.View;
import com.facebook.react.uimanager.ViewManagerWithGeneratedInterface;

public interface MultiComponent1NativeComponentManagerInterface<T: View>: ViewManagerWithGeneratedInterface {
  public fun setDisabled(view: T, value: Boolean): Unit
}
",
  "java/com/facebook/react/viewmanagers/MultiComponent2NativeComponentManagerInterface.kt" => "/**
* This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
*
* Do not edit this file as changes may cause incorrect behavior and will be lost
* once the code is regenerated.
*
* @generated by codegen project: GeneratePropsJavaInterface.js
*/

package com.facebook.react.viewmanagers

import android.view.View;
import com.facebook.react.uimanager.ViewManagerWithGeneratedInterface;

public interface MultiComponent2NativeComponentManagerInterface<T: View>: ViewManagerWithGeneratedInterface {
  public fun setDisabled(view: T, value: Boolean): Unit
}
",
}
`;
